@@ -1,5 +1,15 @@
 2018-11-22  Zalan Bujtas  <zalan@apple.com>
 
+        [LFC][IFC] Merge addNonBreakableStart/NonBreakableEnd calls.
+        https://bugs.webkit.org/show_bug.cgi?id=191903
+
+        Reviewed by Antti Koivisto.
+
+        * layout/inlineformatting/InlineFormattingContext.cpp:
+        (WebCore::Layout::InlineFormattingContext::collectInlineContentForSubtree const):
+
+2018-11-22  Zalan Bujtas  <zalan@apple.com>
+
         [LFC][IFC] Offset formatting context root runs with horizontal margins.
         https://bugs.webkit.org/show_bug.cgi?id=191900
 
